--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,6 +1,6 @@
 <!-- Create your form here -->
-<%= form_tag posts_path do %>
-  <label>Post title:</label><br>
+<%= form_tag students_path do %>
+  <label> First_</label><br>
   <%= text_field_tag :title %><br>
 
   <label>Post Description</label><br>
