--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,9 +1,9 @@
 <!-- Create your form here -->
 <%= form_tag students_path do %>
-  <label> First_</label><br>
+  <label> First_name:</label><br>
   <%= text_field_tag :title %><br>
 
-  <label>Post Description</label><br>
+  <label> Last_name: </label><br>
   <%= text_area_tag :description %><br>
 
   <%= submit_tag "Submit Post" %>
