--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,10 +1,10 @@
 <!-- Create your form here -->
 <%= form_tag students_path do %>
   <label> First_name:</label><br>
-  <%= text_field_tag :title %><br>
+  <%= text_field_tag :First_name %><br>
 
   <label> Last_name: </label><br>
-  <%= text_area_tag :description %><br>
+  <%= text_area_tag :last_name %><br>
 
   <%= submit_tag "Submit Post" %>
 <% end %>
