--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,6 @@
 <!-- Create your form here -->
 <%= form_tag students_path do %>
+<label>Student Form:</label><br>
   <label> First_name:</label><br>
   <%= text_field_tag :First_name %><br>
 
