--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,10 +1,10 @@
 <!-- Create your form here -->
 <%= form_tag students_path do %>
 <label>Student Form:</label><br>
-  
+  <p> First name </p>
   <%= text_field_tag :First_name %><br>
 
-  
+  <p> Last name:</p>
   <%= text_area_tag :last_name %><br>
 
   <%= submit_tag "Submit Post" %>
