--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_tag students_path do %>
 <label>Student Form:</label><br>
   <p> First name </p>
-  <%= text_field_tag :First_name %><br>
+  <%= text_field_tag :first_name %><br>
 
   <p> Last name:</p>
   <%= text_area_tag :last_name %><br>
