Automatically backed up by Learn

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -7,5 +7,5 @@
   <p> Last name:</p>
   <%= text_area_tag :last_name %><br>
 
-  <%= submit_tag "Submit Post" %>
+  <%= submit_tag "Submit Studnets" %>
 <% end %>
